header overlap fix

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -26,12 +26,6 @@ button
 #wrapper
   min-height 100vh
 
-.header-anchor
-  &::before
-    content ""
-    display flex
-    margin-top 60px
-
 h1
   font-size $fsXLarge
   font-weight 400
@@ -43,7 +37,8 @@ h1
 h2
   font-size $fsLarge
   font-weight 400
-  margin-top 2em
+  padding-top 4em
+  margin-top -1em
   line-height 1.2
   border-bottom 1px solid $textColor
   display inline-block
